--- a/amdfas/Dockerfile
+++ b/amdfas/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.12.0-slim
 
 WORKDIR /app
 
-COPY requirements.txt /app/requirements.txt
+COPY requirements.txt .
 
-RUN pip install -r /app/requirements.txt
+
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
