--- a/amdfas/network_analyzer/Dockerfile
+++ b/amdfas/network_analyzer/Dockerfile
@@ -2,9 +2,8 @@ FROM python:3.12.0-slim
 
 WORKDIR /app
 
-COPY ../../requirements.txt /app/requirements.txt
-
-RUN pip install -r /app/requirements.txt
+COPY --from=amdfas-microserv /app/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
